# GCAT

./: .gitignore
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/windows/MAIN/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
logic/: api.cpp  api.hpp  script.cpp  usage.md
training data/: .gitattributes  SAM_часть.txt  snp.vcf
